Add more implict usings

--- a/ExpFromMonsterKillsOnFarm/ExpFromMonsterKillsOnFarm.csproj
+++ b/ExpFromMonsterKillsOnFarm/ExpFromMonsterKillsOnFarm.csproj
@@ -31,5 +31,8 @@
     <Using Include="StardewModdingAPI" />
     <Using Include="JetBrains.Annotations" />
     <Using Include="System.Diagnostics.CodeAnalysis" />
+    <Using Alias="NotNullAttribute" Include="System.Diagnostics.CodeAnalysis.NotNullAttribute"/>
+    <Using Alias="Object" Include="System.Object"/>
+    <Using Alias="SObject" Include="StardewValley.Object"/>
   </ItemGroup>
 </Project>
